website/websites/u64q/code/regexdna.4.scala.log

Sat, 19 Jun 2010 02:46:08 GMT

MAKE:
mv regexdna.scala-4.scala regexdna.scala
/usr/local/src/scala-2.8.0.RC6/bin/scalac regexdna.scala
regexdna.scala:70: error: not found: type char
      val buf = new Array[char](4 *1024*1024);
                          ^
regexdna.scala:35: error: missing arguments for method collect in trait Iterator;
follow this method with `_' if you want to treat it as a partially applied function
      val count_results   = patterns map( pt => future(pt.r.findAllIn(input).collect.length) )
                                                                             ^
regexdna.scala:57: error: type mismatch;
 found   : Array[Nothing]
 required: Iterable[?]
      for ((pt, cres) <- patterns zip count_results)
                                      ^
three errors found
make: [regexdna.scala-4.scala_run] Error 1 (ignored)
4.00s to complete and log all make actions

COMMAND LINE:
env JAVA_OPTS=-Xmx1024m /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar regexdna 0 < regexdna-input50000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: regexdna
Caused by: java.lang.ClassNotFoundException: regexdna
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: regexdna.  Program will exit.
